# GSheetsMCP

./: .gitignore  EMAIL_TOOLS_SOLUTION.md  README.md  README2.md  check_database.py  client.py  email_marketing_agent.py  main.py  pyproject.toml  server.py  setup.py  test_client.py  view_poster.py
